103134 - z-index issues

--- a/drupal/sites/all/themes/leidos/css/sass/partials/modules/_flex-hero-rotator.scss
+++ b/drupal/sites/all/themes/leidos/css/sass/partials/modules/_flex-hero-rotator.scss
@@ -13,7 +13,7 @@
 	clear: both;
 	display: block;
 	margin-bottom: calc(#{$multiBit} * 2);
-	overflow: hidden;
+	// overflow: hidden;
 	position: relative;
 
 	&:last-child {
