--- a/drupal/sites/all/themes/leidos/css/sass/partials/modules/_flex-video-settings.scss
+++ b/drupal/sites/all/themes/leidos/css/sass/partials/modules/_flex-video-settings.scss
@@ -146,6 +146,10 @@
 				.field-name-field-video-tout,
 				.views-field-field-video-tout {
 					display: block;
+
+					.flex-control-nav {
+						display: block;
+					}
 				}
 			}
 		}
